Delmar/force-app/main/default/objects/DEL_CaseComment__c/DEL_CaseComment__c.object-meta.xml
<CustomObject>
    <label>Case Comment</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>