Delmar/force-app/main/default/objects/DEL_CaseComment__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>DEL- This field is used to store the body of the comment</description>
    <label>Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>