Delmar/force-app/main/default/objects/DEL_CaseComment__c/fields/CommentCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>CommentCreatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Id of the User who has created the Case Comment</description>
    <label>Comment Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>