Delmar/force-app/main/default/objects/DEL_CaseComment__c/fields/CommentCreatedName__c.field-meta.xml
<CustomField>
    <fullName>CommentCreatedName__c</fullName>
    <label>Comment Created By Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>