Delmar/force-app/main/default/objects/DEL_CaseComment__c/fields/CreatedByEmail__c.field-meta.xml
<CustomField>
    <fullName>CreatedByEmail__c</fullName>
    <description>DEL- This field stores the value of comment creator&apos;s email ID</description>
    <label>Created By Email</label>
    <type>Email</type>
</CustomField>