Delmar/force-app/main/default/objects/DEL_CaseComment__c/fields/EmailMessageId__c.field-meta.xml
<CustomField>
    <fullName>EmailMessageId__c</fullName>
    <label>Email Message Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>