Delmar/force-app/main/default/objects/DEL_CaseComment__c/fields/HasAttachment__c.field-meta.xml
<CustomField>
    <fullName>HasAttachment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used to identify if a Case Comment has Attachments associated to it.</description>
    <label>Has Attachment</label>
    <type>Checkbox</type>
</CustomField>