Delmar/force-app/main/default/objects/DEL_CaseComment__c/fields/VisibleToCustomer__c.field-meta.xml
<CustomField>
    <fullName>VisibleToCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Field specifies that whether this comment should be visible to Customer or not.</description>
    <label>Visible to Customer</label>
    <type>Checkbox</type>
</CustomField>